PersonalCompilerFrontEnd/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> LBRACE action_new_scope stmt_list RBRACE
Rule 3     action_new_scope -> <empty>
Rule 4     stmt_list -> stmt_list stmt
Rule 5     stmt_list -> <empty>
Rule 6     stmt -> type ID SEMICOLON
Rule 7     stmt -> ID ASSIGN lowop SEMICOLON
Rule 8     stmt -> block
Rule 9     stmt -> READ ID SEMICOLON
Rule 10    stmt -> WRITE lowop SEMICOLON
Rule 11    stmt -> IF lowop LPAREN stmt optelse RPAREN
Rule 12    stmt -> WHILE lowop LPAREN stmt RPAREN
Rule 13    stmt -> lowop
Rule 14    stmt -> comment
Rule 15    optelse -> ELSE LPAREN stmt RPAREN
Rule 16    optelse -> <empty>
Rule 17    type -> INT
Rule 18    lowop -> lowop AND equal
Rule 19    lowop -> lowop OR equal
Rule 20    lowop -> equal
Rule 21    lowop -> equal EQUALTO op
Rule 22    equal -> equal NOTEQUAL op
Rule 23    equal -> op
Rule 24    op -> op LESSTHAN expr
Rule 25    op -> op GREATERTHAN expr
Rule 26    op -> op LESSEQUAL expr
Rule 27    op -> op GREATEQUAL expr
Rule 28    op -> expr
Rule 29    expr -> expr PLUS term
Rule 30    expr -> expr MINUS term
Rule 31    expr -> term
Rule 32    term -> term TIMES factor
Rule 33    term -> term DIVIDE factor
Rule 34    term -> term MODULUS factor
Rule 35    term -> factor
Rule 36    factor -> MINUS factor
Rule 37    factor -> UNARYNOT factor
Rule 38    factor -> ID
Rule 39    factor -> NUM
Rule 40    factor -> LPAREN lowop RPAREN
Rule 41    comment -> COMMENT
Rule 42    comment -> MLCOMMENT

Terminals, with rules where they appear

AND                  : 18
ASSIGN               : 7
COMMENT              : 41
DIVIDE               : 33
ELSE                 : 15
EQUALTO              : 21
GREATEQUAL           : 27
GREATERTHAN          : 25
ID                   : 6 7 9 38
IF                   : 11
INT                  : 17
LBRACE               : 2
LESSEQUAL            : 26
LESSTHAN             : 24
LPAREN               : 11 12 15 40
MINUS                : 30 36
MLCOMMENT            : 42
MODULUS              : 34
NEWLINE              : 
NOTEQUAL             : 22
NUM                  : 39
OR                   : 19
PLUS                 : 29
RBRACE               : 2
READ                 : 9
RPAREN               : 11 12 15 40
SEMICOLON            : 6 7 9 10
TIMES                : 32
UNARYNOT             : 37
WHILE                : 12
WRITE                : 10
error                : 

Nonterminals, with rules where they appear

action_new_scope     : 2
block                : 1 8
comment              : 14
equal                : 18 19 20 21 22
expr                 : 24 25 26 27 28 29 30
factor               : 32 33 34 35 36 37
lowop                : 7 10 11 12 13 18 19 40
op                   : 21 22 23 24 25 26 27
optelse              : 11
program              : 0
stmt                 : 4 11 12 15
stmt_list            : 2 4
term                 : 29 30 31 32 33 34
type                 : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . LBRACE action_new_scope stmt_list RBRACE

    LBRACE          shift and go to state 3

    program                        shift and go to state 1
    block                          shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> LBRACE . action_new_scope stmt_list RBRACE
    (3) action_new_scope -> .

    RBRACE          reduce using rule 3 (action_new_scope -> .)
    ID              reduce using rule 3 (action_new_scope -> .)
    READ            reduce using rule 3 (action_new_scope -> .)
    WRITE           reduce using rule 3 (action_new_scope -> .)
    IF              reduce using rule 3 (action_new_scope -> .)
    WHILE           reduce using rule 3 (action_new_scope -> .)
    INT             reduce using rule 3 (action_new_scope -> .)
    LBRACE          reduce using rule 3 (action_new_scope -> .)
    COMMENT         reduce using rule 3 (action_new_scope -> .)
    MLCOMMENT       reduce using rule 3 (action_new_scope -> .)
    MINUS           reduce using rule 3 (action_new_scope -> .)
    UNARYNOT        reduce using rule 3 (action_new_scope -> .)
    NUM             reduce using rule 3 (action_new_scope -> .)
    LPAREN          reduce using rule 3 (action_new_scope -> .)

    action_new_scope               shift and go to state 4

state 4

    (2) block -> LBRACE action_new_scope . stmt_list RBRACE
    (4) stmt_list -> . stmt_list stmt
    (5) stmt_list -> .

    RBRACE          reduce using rule 5 (stmt_list -> .)
    ID              reduce using rule 5 (stmt_list -> .)
    READ            reduce using rule 5 (stmt_list -> .)
    WRITE           reduce using rule 5 (stmt_list -> .)
    IF              reduce using rule 5 (stmt_list -> .)
    WHILE           reduce using rule 5 (stmt_list -> .)
    INT             reduce using rule 5 (stmt_list -> .)
    LBRACE          reduce using rule 5 (stmt_list -> .)
    COMMENT         reduce using rule 5 (stmt_list -> .)
    MLCOMMENT       reduce using rule 5 (stmt_list -> .)
    MINUS           reduce using rule 5 (stmt_list -> .)
    UNARYNOT        reduce using rule 5 (stmt_list -> .)
    NUM             reduce using rule 5 (stmt_list -> .)
    LPAREN          reduce using rule 5 (stmt_list -> .)

    stmt_list                      shift and go to state 5

state 5

    (2) block -> LBRACE action_new_scope stmt_list . RBRACE
    (4) stmt_list -> stmt_list . stmt
    (6) stmt -> . type ID SEMICOLON
    (7) stmt -> . ID ASSIGN lowop SEMICOLON
    (8) stmt -> . block
    (9) stmt -> . READ ID SEMICOLON
    (10) stmt -> . WRITE lowop SEMICOLON
    (11) stmt -> . IF lowop LPAREN stmt optelse RPAREN
    (12) stmt -> . WHILE lowop LPAREN stmt RPAREN
    (13) stmt -> . lowop
    (14) stmt -> . comment
    (17) type -> . INT
    (2) block -> . LBRACE action_new_scope stmt_list RBRACE
    (18) lowop -> . lowop AND equal
    (19) lowop -> . lowop OR equal
    (20) lowop -> . equal
    (21) lowop -> . equal EQUALTO op
    (41) comment -> . COMMENT
    (42) comment -> . MLCOMMENT
    (22) equal -> . equal NOTEQUAL op
    (23) equal -> . op
    (24) op -> . op LESSTHAN expr
    (25) op -> . op GREATERTHAN expr
    (26) op -> . op LESSEQUAL expr
    (27) op -> . op GREATEQUAL expr
    (28) op -> . expr
    (29) expr -> . expr PLUS term
    (30) expr -> . expr MINUS term
    (31) expr -> . term
    (32) term -> . term TIMES factor
    (33) term -> . term DIVIDE factor
    (34) term -> . term MODULUS factor
    (35) term -> . factor
    (36) factor -> . MINUS factor
    (37) factor -> . UNARYNOT factor
    (38) factor -> . ID
    (39) factor -> . NUM
    (40) factor -> . LPAREN lowop RPAREN

    RBRACE          shift and go to state 6
    ID              shift and go to state 9
    READ            shift and go to state 12
    WRITE           shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 16
    INT             shift and go to state 18
    LBRACE          shift and go to state 3
    COMMENT         shift and go to state 21
    MLCOMMENT       shift and go to state 22
    MINUS           shift and go to state 25
    UNARYNOT        shift and go to state 27
    NUM             shift and go to state 28
    LPAREN          shift and go to state 15

    stmt                           shift and go to state 7
    type                           shift and go to state 8
    lowop                          shift and go to state 10
    block                          shift and go to state 11
    comment                        shift and go to state 17
    equal                          shift and go to state 19
    op                             shift and go to state 20
    expr                           shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 26

state 6

    (2) block -> LBRACE action_new_scope stmt_list RBRACE .

    $end            reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    RBRACE          reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    ID              reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    READ            reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    WRITE           reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    IF              reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    WHILE           reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    INT             reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    LBRACE          reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    COMMENT         reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    MLCOMMENT       reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    MINUS           reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    UNARYNOT        reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    NUM             reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    LPAREN          reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    ELSE            reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    RPAREN          reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)


state 7

    (4) stmt_list -> stmt_list stmt .

    RBRACE          reduce using rule 4 (stmt_list -> stmt_list stmt .)
    ID              reduce using rule 4 (stmt_list -> stmt_list stmt .)
    READ            reduce using rule 4 (stmt_list -> stmt_list stmt .)
    WRITE           reduce using rule 4 (stmt_list -> stmt_list stmt .)
    IF              reduce using rule 4 (stmt_list -> stmt_list stmt .)
    WHILE           reduce using rule 4 (stmt_list -> stmt_list stmt .)
    INT             reduce using rule 4 (stmt_list -> stmt_list stmt .)
    LBRACE          reduce using rule 4 (stmt_list -> stmt_list stmt .)
    COMMENT         reduce using rule 4 (stmt_list -> stmt_list stmt .)
    MLCOMMENT       reduce using rule 4 (stmt_list -> stmt_list stmt .)
    MINUS           reduce using rule 4 (stmt_list -> stmt_list stmt .)
    UNARYNOT        reduce using rule 4 (stmt_list -> stmt_list stmt .)
    NUM             reduce using rule 4 (stmt_list -> stmt_list stmt .)
    LPAREN          reduce using rule 4 (stmt_list -> stmt_list stmt .)


state 8

    (6) stmt -> type . ID SEMICOLON

    ID              shift and go to state 29


state 9

    (7) stmt -> ID . ASSIGN lowop SEMICOLON
    (38) factor -> ID .

    ASSIGN          shift and go to state 30
    TIMES           reduce using rule 38 (factor -> ID .)
    DIVIDE          reduce using rule 38 (factor -> ID .)
    MODULUS         reduce using rule 38 (factor -> ID .)
    PLUS            reduce using rule 38 (factor -> ID .)
    MINUS           reduce using rule 38 (factor -> ID .)
    LESSTHAN        reduce using rule 38 (factor -> ID .)
    GREATERTHAN     reduce using rule 38 (factor -> ID .)
    LESSEQUAL       reduce using rule 38 (factor -> ID .)
    GREATEQUAL      reduce using rule 38 (factor -> ID .)
    EQUALTO         reduce using rule 38 (factor -> ID .)
    NOTEQUAL        reduce using rule 38 (factor -> ID .)
    AND             reduce using rule 38 (factor -> ID .)
    OR              reduce using rule 38 (factor -> ID .)
    RBRACE          reduce using rule 38 (factor -> ID .)
    ID              reduce using rule 38 (factor -> ID .)
    READ            reduce using rule 38 (factor -> ID .)
    WRITE           reduce using rule 38 (factor -> ID .)
    IF              reduce using rule 38 (factor -> ID .)
    WHILE           reduce using rule 38 (factor -> ID .)
    INT             reduce using rule 38 (factor -> ID .)
    LBRACE          reduce using rule 38 (factor -> ID .)
    COMMENT         reduce using rule 38 (factor -> ID .)
    MLCOMMENT       reduce using rule 38 (factor -> ID .)
    UNARYNOT        reduce using rule 38 (factor -> ID .)
    NUM             reduce using rule 38 (factor -> ID .)
    LPAREN          reduce using rule 38 (factor -> ID .)
    ELSE            reduce using rule 38 (factor -> ID .)
    RPAREN          reduce using rule 38 (factor -> ID .)


state 10

    (13) stmt -> lowop .
    (18) lowop -> lowop . AND equal
    (19) lowop -> lowop . OR equal

    RBRACE          reduce using rule 13 (stmt -> lowop .)
    ID              reduce using rule 13 (stmt -> lowop .)
    READ            reduce using rule 13 (stmt -> lowop .)
    WRITE           reduce using rule 13 (stmt -> lowop .)
    IF              reduce using rule 13 (stmt -> lowop .)
    WHILE           reduce using rule 13 (stmt -> lowop .)
    INT             reduce using rule 13 (stmt -> lowop .)
    LBRACE          reduce using rule 13 (stmt -> lowop .)
    COMMENT         reduce using rule 13 (stmt -> lowop .)
    MLCOMMENT       reduce using rule 13 (stmt -> lowop .)
    MINUS           reduce using rule 13 (stmt -> lowop .)
    UNARYNOT        reduce using rule 13 (stmt -> lowop .)
    NUM             reduce using rule 13 (stmt -> lowop .)
    LPAREN          reduce using rule 13 (stmt -> lowop .)
    ELSE            reduce using rule 13 (stmt -> lowop .)
    RPAREN          reduce using rule 13 (stmt -> lowop .)
    AND             shift and go to state 31
    OR              shift and go to state 32


state 11

    (8) stmt -> block .

    RBRACE          reduce using rule 8 (stmt -> block .)
    ID              reduce using rule 8 (stmt -> block .)
    READ            reduce using rule 8 (stmt -> block .)
    WRITE           reduce using rule 8 (stmt -> block .)
    IF              reduce using rule 8 (stmt -> block .)
    WHILE           reduce using rule 8 (stmt -> block .)
    INT             reduce using rule 8 (stmt -> block .)
    LBRACE          reduce using rule 8 (stmt -> block .)
    COMMENT         reduce using rule 8 (stmt -> block .)
    MLCOMMENT       reduce using rule 8 (stmt -> block .)
    MINUS           reduce using rule 8 (stmt -> block .)
    UNARYNOT        reduce using rule 8 (stmt -> block .)
    NUM             reduce using rule 8 (stmt -> block .)
    LPAREN          reduce using rule 8 (stmt -> block .)
    ELSE            reduce using rule 8 (stmt -> block .)
    RPAREN          reduce using rule 8 (stmt -> block .)


state 12

    (9) stmt -> READ . ID SEMICOLON

    ID              shift and go to state 33


state 13

    (10) stmt -> WRITE . lowop SEMICOLON
    (18) lowop -> . lowop AND equal
    (19) lowop -> . lowop OR equal
    (20) lowop -> . equal
    (21) lowop -> . equal EQUALTO op
    (22) equal -> . equal NOTEQUAL op
    (23) equal -> . op
    (24) op -> . op LESSTHAN expr
    (25) op -> . op GREATERTHAN expr
    (26) op -> . op LESSEQUAL expr
    (27) op -> . op GREATEQUAL expr
    (28) op -> . expr
    (29) expr -> . expr PLUS term
    (30) expr -> . expr MINUS term
    (31) expr -> . term
    (32) term -> . term TIMES factor
    (33) term -> . term DIVIDE factor
    (34) term -> . term MODULUS factor
    (35) term -> . factor
    (36) factor -> . MINUS factor
    (37) factor -> . UNARYNOT factor
    (38) factor -> . ID
    (39) factor -> . NUM
    (40) factor -> . LPAREN lowop RPAREN

    MINUS           shift and go to state 25
    UNARYNOT        shift and go to state 27
    ID              shift and go to state 35
    NUM             shift and go to state 28
    LPAREN          shift and go to state 15

    lowop                          shift and go to state 34
    equal                          shift and go to state 19
    op                             shift and go to state 20
    expr                           shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 26

state 14

    (11) stmt -> IF . lowop LPAREN stmt optelse RPAREN
    (18) lowop -> . lowop AND equal
    (19) lowop -> . lowop OR equal
    (20) lowop -> . equal
    (21) lowop -> . equal EQUALTO op
    (22) equal -> . equal NOTEQUAL op
    (23) equal -> . op
    (24) op -> . op LESSTHAN expr
    (25) op -> . op GREATERTHAN expr
    (26) op -> . op LESSEQUAL expr
    (27) op -> . op GREATEQUAL expr
    (28) op -> . expr
    (29) expr -> . expr PLUS term
    (30) expr -> . expr MINUS term
    (31) expr -> . term
    (32) term -> . term TIMES factor
    (33) term -> . term DIVIDE factor
    (34) term -> . term MODULUS factor
    (35) term -> . factor
    (36) factor -> . MINUS factor
    (37) factor -> . UNARYNOT factor
    (38) factor -> . ID
    (39) factor -> . NUM
    (40) factor -> . LPAREN lowop RPAREN

    MINUS           shift and go to state 25
    UNARYNOT        shift and go to state 27
    ID              shift and go to state 35
    NUM             shift and go to state 28
    LPAREN          shift and go to state 15

    lowop                          shift and go to state 36
    equal                          shift and go to state 19
    op                             shift and go to state 20
    expr                           shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 26

state 15

    (40) factor -> LPAREN . lowop RPAREN
    (18) lowop -> . lowop AND equal
    (19) lowop -> . lowop OR equal
    (20) lowop -> . equal
    (21) lowop -> . equal EQUALTO op
    (22) equal -> . equal NOTEQUAL op
    (23) equal -> . op
    (24) op -> . op LESSTHAN expr
    (25) op -> . op GREATERTHAN expr
    (26) op -> . op LESSEQUAL expr
    (27) op -> . op GREATEQUAL expr
    (28) op -> . expr
    (29) expr -> . expr PLUS term
    (30) expr -> . expr MINUS term
    (31) expr -> . term
    (32) term -> . term TIMES factor
    (33) term -> . term DIVIDE factor
    (34) term -> . term MODULUS factor
    (35) term -> . factor
    (36) factor -> . MINUS factor
    (37) factor -> . UNARYNOT factor
    (38) factor -> . ID
    (39) factor -> . NUM
    (40) factor -> . LPAREN lowop RPAREN

    MINUS           shift and go to state 25
    UNARYNOT        shift and go to state 27
    ID              shift and go to state 35
    NUM             shift and go to state 28
    LPAREN          shift and go to state 15

    lowop                          shift and go to state 37
    equal                          shift and go to state 19
    op                             shift and go to state 20
    expr                           shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 26

state 16

    (12) stmt -> WHILE . lowop LPAREN stmt RPAREN
    (18) lowop -> . lowop AND equal
    (19) lowop -> . lowop OR equal
    (20) lowop -> . equal
    (21) lowop -> . equal EQUALTO op
    (22) equal -> . equal NOTEQUAL op
    (23) equal -> . op
    (24) op -> . op LESSTHAN expr
    (25) op -> . op GREATERTHAN expr
    (26) op -> . op LESSEQUAL expr
    (27) op -> . op GREATEQUAL expr
    (28) op -> . expr
    (29) expr -> . expr PLUS term
    (30) expr -> . expr MINUS term
    (31) expr -> . term
    (32) term -> . term TIMES factor
    (33) term -> . term DIVIDE factor
    (34) term -> . term MODULUS factor
    (35) term -> . factor
    (36) factor -> . MINUS factor
    (37) factor -> . UNARYNOT factor
    (38) factor -> . ID
    (39) factor -> . NUM
    (40) factor -> . LPAREN lowop RPAREN

    MINUS           shift and go to state 25
    UNARYNOT        shift and go to state 27
    ID              shift and go to state 35
    NUM             shift and go to state 28
    LPAREN          shift and go to state 15

    lowop                          shift and go to state 38
    equal                          shift and go to state 19
    op                             shift and go to state 20
    expr                           shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 26

state 17

    (14) stmt -> comment .

    RBRACE          reduce using rule 14 (stmt -> comment .)
    ID              reduce using rule 14 (stmt -> comment .)
    READ            reduce using rule 14 (stmt -> comment .)
    WRITE           reduce using rule 14 (stmt -> comment .)
    IF              reduce using rule 14 (stmt -> comment .)
    WHILE           reduce using rule 14 (stmt -> comment .)
    INT             reduce using rule 14 (stmt -> comment .)
    LBRACE          reduce using rule 14 (stmt -> comment .)
    COMMENT         reduce using rule 14 (stmt -> comment .)
    MLCOMMENT       reduce using rule 14 (stmt -> comment .)
    MINUS           reduce using rule 14 (stmt -> comment .)
    UNARYNOT        reduce using rule 14 (stmt -> comment .)
    NUM             reduce using rule 14 (stmt -> comment .)
    LPAREN          reduce using rule 14 (stmt -> comment .)
    ELSE            reduce using rule 14 (stmt -> comment .)
    RPAREN          reduce using rule 14 (stmt -> comment .)


state 18

    (17) type -> INT .

    ID              reduce using rule 17 (type -> INT .)


state 19

    (20) lowop -> equal .
    (21) lowop -> equal . EQUALTO op
    (22) equal -> equal . NOTEQUAL op

    AND             reduce using rule 20 (lowop -> equal .)
    OR              reduce using rule 20 (lowop -> equal .)
    RBRACE          reduce using rule 20 (lowop -> equal .)
    ID              reduce using rule 20 (lowop -> equal .)
    READ            reduce using rule 20 (lowop -> equal .)
    WRITE           reduce using rule 20 (lowop -> equal .)
    IF              reduce using rule 20 (lowop -> equal .)
    WHILE           reduce using rule 20 (lowop -> equal .)
    INT             reduce using rule 20 (lowop -> equal .)
    LBRACE          reduce using rule 20 (lowop -> equal .)
    COMMENT         reduce using rule 20 (lowop -> equal .)
    MLCOMMENT       reduce using rule 20 (lowop -> equal .)
    MINUS           reduce using rule 20 (lowop -> equal .)
    UNARYNOT        reduce using rule 20 (lowop -> equal .)
    NUM             reduce using rule 20 (lowop -> equal .)
    LPAREN          reduce using rule 20 (lowop -> equal .)
    SEMICOLON       reduce using rule 20 (lowop -> equal .)
    RPAREN          reduce using rule 20 (lowop -> equal .)
    ELSE            reduce using rule 20 (lowop -> equal .)
    EQUALTO         shift and go to state 39
    NOTEQUAL        shift and go to state 40


state 20

    (23) equal -> op .
    (24) op -> op . LESSTHAN expr
    (25) op -> op . GREATERTHAN expr
    (26) op -> op . LESSEQUAL expr
    (27) op -> op . GREATEQUAL expr

    EQUALTO         reduce using rule 23 (equal -> op .)
    NOTEQUAL        reduce using rule 23 (equal -> op .)
    AND             reduce using rule 23 (equal -> op .)
    OR              reduce using rule 23 (equal -> op .)
    RBRACE          reduce using rule 23 (equal -> op .)
    ID              reduce using rule 23 (equal -> op .)
    READ            reduce using rule 23 (equal -> op .)
    WRITE           reduce using rule 23 (equal -> op .)
    IF              reduce using rule 23 (equal -> op .)
    WHILE           reduce using rule 23 (equal -> op .)
    INT             reduce using rule 23 (equal -> op .)
    LBRACE          reduce using rule 23 (equal -> op .)
    COMMENT         reduce using rule 23 (equal -> op .)
    MLCOMMENT       reduce using rule 23 (equal -> op .)
